Week 3 complete, sans extra credit.

--- a/Week 3 - Forms, Fonts, Colors, & Bootstrap/Favorite Program/style.css
+++ b/Week 3 - Forms, Fonts, Colors, & Bootstrap/Favorite Program/style.css
@@ -5,8 +5,14 @@ code.mine {
 
 .jumbotron {
     background-color: darkslateblue;
+    text-align: center;
 }
 
 body {
     background-color: black;
+    font-family: "Lucida Console",serif;
+}
+
+.spacer {
+    background-color: darkslateblue;
 }
