--- a/Topic 09 - Vue Forms and Directives/vue-week-2-starter-master/tracker/styles.css
+++ b/Topic 09 - Vue Forms and Directives/vue-week-2-starter-master/tracker/styles.css
@@ -2,3 +2,16 @@
     max-height: 250px;
     overflow: scroll;
 }
+
+.sketching {
+    background-color: mediumseagreen;
+    color: white;
+}
+.drawing {
+    background-color: darkred;
+    color: white;
+}
+.writing {
+    background-color: dodgerblue;
+    color: white;
+}
